# trip-ingest

./: .gitignore  ANSWERS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260716_0c417ea5c3a3_create_trips_table.py  20260721_0f8fc97a47ab_create_job_slots_table.py
sample-drops/: 2026-03-14.jsonl  2026-03-15.jsonl
src/trip_ingest/: __main__.py  errors.py  ingest.py  loader.py  migrate.py  model.py  reader.py  settings.py  slots.py
tests/: conftest.py  test_e2e_compose.py  test_errors.py  test_loader.py  test_migrations.py  test_parse.py  test_reader.py  test_size.py  test_slots.py
tmp/: e2e-clean.jsonl  e2e-dirty.jsonl
tools/: check_loc.py
